# dog-breed-classifier

./: .dockerignore  .env.exemple  .gitignore  02_model_selection.ipynb  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  requirements_streamlit.txt
.dvc/: config
.github/workflows/: ci.yml
api/: main.py
data/: raw.dvc
data/raw/: .gitignore  selected.dvc
dog_breed_classifier/: __init__.py  dataset.py  features.py  monitoring.py  plots.py
dog_breed_classifier/modeling/: evaluate.py  predict.py  train.py
notebooks/: 02_model_selection.ipynb
pages/: 1_Prediction.py  2_Monitoring.py
reports/: classification_report_cnn_scratch.txt  classification_report_efficientnet_b0.txt  classification_report_inception_v3.txt  model_comparison.json  reference_features.csv  run_ids.json
tests/: conftest.py  test_api.py  test_data.py  test_features.py  test_predict.py
