[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "dog_breed_classifier"
version = "0.0.1"
description = "Syst\u00e8me de classification automatique de races de chiens"
authors = [
  { name = "AMD" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "tensorflow (>=2.21.0,<3.0.0)",
    "mlflow (>=3.13.0,<4.0.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "optuna (>=4.9.0,<5.0.0)",
    "evidently (>=0.7.21,<0.8.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "cryptography (>=41.0.0)",
    "pyopenssl (>=26.2.0,<27.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
]
requires-python = ">=3.11,<3.13"


[tool.ruff]
line-length = 99
src = ["dog_breed_classifier"]
include = ["pyproject.toml", "dog_breed_classifier/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dog_breed_classifier"]
force-sort-within-sections = true


[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "jupyterlab (>=4.5.8,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
